css/style.css
.quick-actions-main-container {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  width: 100%;
  height: 450px;
  text-align: initial;
  overflow: hidden;
  transition: height 0.35s ease;
}

.quick-actions-main-container.quick-actions-closed {
  height: 40px;
}

.quick-actions-main-container * {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.quick-actions-main-container > * {
  width: 100%;
}

.quick-actions-content-popover {
  height: 400px;
  position: relative;
  overflow: hidden;
  top: 10px;
  background: white;
  border: 1px solid #cacaca;
  border-radius: 4px;
}

.quick-actions-list-view {
  position: relative;
  overflow: hidden;
  height: calc(100% - 32px);
}

.quick-actions-list-view .quick-actions-listEntries {
  position: absolute;
  top: 0px;
  width: 100%;
  height: 100%;
  overflow-y: scroll;
  overflow-x: hidden;
  list-style-type: none;
  transform: translateX(100%);
  transition: transform 0.3s ease-out;
}

.quick-actions-listEntry {
  position: relative;
  cursor: pointer;
  width: 100%;
  padding: 10px;
}

.quick-actions-listEntry.quick-actions-has-img {
    padding: 20px;
}

.quick-actions-listEntry > * {
    vertical-align: middle;
}

.quick-actions-listEntry.quick-actions-selected {
  background: #3b88c3;
  color: white;
  transition: opacity 0.2s ease-out;
}

.quick-actions-listEntry.quick-actions-selected.quickactions-tap-effect {
  opacity: 0.8;
}

.quick-actions-listEntry .quick-actions-matched {
  font-weight: bold;
  text-decoration: underline;
}


.quick-actions-listEntry.quick-actions-has-img .quick-actions-provider-label {
    display: inline-block;
    margin-left: 40px;
}

.quick-actions-listEntry .quick-actions-provider-img {
    position: absolute;
    width: 30px;
    height: 30px;
    border-radius: 50%;
}

.quick-actions-listEntry .quick-actions-status-icon,
.quick-actions-listEntry .quick-actions-provider-icon {
  position: absolute;
  right: 10px;
  top: 15px;
}

.quick-actions-listEntry .quick-actions-status-icon {
  display: none;
}

.quick-actions-execution-done .quick-actions-status-icon,
.quick-actions-execution-active .quick-actions-status-icon,
.quick-actions-execution-failed .quick-actions-status-icon {
  display: block;
}

.quick-actions-execution-active .quick-actions-status-icon:before {
  content: "...";
}

.quick-actions-execution-done .quick-actions-status-icon:before {
  content: "✓";
}

.quick-actions-execution-failed .quick-actions-status-icon:before {
  content: "✗";
}

.quick-actions-listEntry .quick-actions-provider-icon,
.quick-actions-listEntry .quick-actions-provider-icon:before {
  width: 0;
  height: 0;
  border-top: 8px solid transparent;
  border-bottom: 8px solid transparent;

  border-left: 8px solid #333;
}

.quick-actions-listEntry .quick-actions-provider-icon:before {
    content: "";
    position: absolute;
    top: -8px;
    right: 2px;
    border-left-color: white;
}

.quick-actions-listEntry.quick-actions-selected .quick-actions-provider-icon {
  border-left-color: white;
}

.quick-actions-listEntry.quick-actions-selected .quick-actions-provider-icon:before {
  border-left-color: #3b88c3;
}

.quick-actions-content-popover .quick-actions-breadcrumb {
    padding: 8px 15px;
    list-style: none;
    background-color: #f5f5f5;
    border-radius: 4px
}

.quick-actions-content-popover .quick-actions-breadcrumb > li {
    display: inline-block
}

.quick-actions-content-popover .quick-actions-breadcrumb > li+li:before {
    padding: 0 5px;
    color: #ccc;
    content: "/\00a0"
}

.quick-actions-content-popover .quick-actions-breadcrumb > .active {
    color: #777
}

.quick-actions-content-popover .quick-actions-breadcrumb a {
    color: #337ab7;
    text-decoration: none
}

.quick-actions-content-popover .quick-actions-breadcrumb a:focus,
.quick-actions-content-popover .quick-actions-breadcrumb a:hover {
    color: #23527c;
    text-decoration: underline
}

.quick-actions-content-popover .quick-actions-breadcrumb a:focus {
    outline: thin dotted;
    outline: 5px auto -webkit-focus-ring-color;
    outline-offset: -2px
}

.quick-actions-search-group > * {
  height: 35px;
  vertical-align: middle;
}

.quick-actions-search-group input {
  width: calc(100% - 40px);
  display: inline-block;
  padding: 8px;
  border: 1px solid #cacaca;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s
}

.quick-actions-search-group input:focus {
    border-color: #66afe9;
    outline: 0;
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 5px rgba(102,175,233,.6)
}

.quick-actions-search-group-addon.quick-actions-provider-icon {
    display: inline-block;
    width: 40px;
    background: #f5f5f5;
    padding: 8px;
    text-align: center;
    border: 1px solid #cacaca;
    border-right-width: 0px;
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;

    background-size: 25px;
    background-repeat: no-repeat;
    background-position: center center;
    -webkit-filter: grayscale(100%);
}

